完成图片分享

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "mint-ui": "^2.2.13",
+    "moment": "^2.23.0",
+    "vant": "^1.5.1",
     "vue": "^2.5.21",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
