--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.4",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.0",
@@ -35,6 +36,7 @@
     "moment": "^2.23.0",
     "vant": "^1.5.1",
     "vue": "^2.5.21",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
   }
